# PrivateLend

./: package.json
contracts/: Cargo.toml
contracts/programs/collateral-vault/: Cargo.toml
contracts/programs/collateral-vault/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
contracts/programs/collateral-vault/src/instructions/: initialize.rs  liquidate.rs  lock.rs  mod.rs  release.rs  stats.rs
contracts/programs/credit-scorer/: Cargo.toml
contracts/programs/credit-scorer/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
contracts/programs/credit-scorer/src/instructions/: initialize.rs  mod.rs  request_score.rs  submit_score.rs  verify_proof.rs
contracts/programs/lending-pool/: Cargo.toml
contracts/programs/lending-pool/src/: lib.rs  states.rs
contracts/programs/lending-pool/src/instructions/: deposit.rs
contracts/programs/loan-manager/: Cargo.toml
contracts/programs/loan-manager/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
contracts/programs/loan-manager/src/instructions/: add_collateral.rs  approve_loan.rs  disburse_loan.rs  mod.rs  repay_loan.rs  request_loan.rs  update_health.rs
contracts/tests/: LoanManager.test.ts
