[package]
name = "loan-manager"
version = "0.1.0"
description = "PrivateLend loan manager"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loan_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "1.18"

# For ZK proof signature verification (REAL CRATE)


# For proof parsing (REAL CRATE)
bs58 = "0.5"


sha2 = "0.10"
# NO FAKE CRATES - We'll implement encryption storage ourselves!